--- a/zendesk_backend/.env
+++ b/zendesk_backend/.env
@@ -1,5 +1,7 @@
 
-USERNAME1 = Enter the username
-PASSWORD1 = Enter the password
-URI = Enter the URI
+USERNAME1 = Enter your username
+PASSWORD1 = Enter your password
+URI = Enter the api end point
 PORT=3030
+HOST=http://localhost:
+UI_SERVER = http://localhost:3000
