--- a/zendesk_backend/package.json
+++ b/zendesk_backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "mocha"
   },
   "dependencies": {
@@ -18,7 +18,6 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mocha": "^9.1.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "morgan": "~1.9.1"
   }
 }
